# olmount

./: README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-19-olmount-e2e-notes.md  2026-06-19-olmount-implementation.md
docs/superpowers/specs/: 2026-06-19-olmount-design.md
src/olmount/: __main__.py  cli.py  config.py  util.py
src/olmount/api/: auth.py  http_client.py  rest.py  socketio.py
src/olmount/commands/: _run.py  clone.py  compile.py  list.py  login.py  logout.py  pdf.py  pull.py  push.py  status.py  sync.py  watch.py  whoami.py
src/olmount/sync/: engine.py  ignore.py  merge.py  ot.py  state.py  tree.py  watcher.py
tests/: test_auth.py  test_commands.py  test_commands_sync.py  test_compile.py  test_config.py  test_engine_classify.py  test_engine_reconcile.py  test_http_client.py  test_ignore.py  test_merge.py  test_ot.py  test_rest.py  test_socketio.py  test_state.py  test_tree.py  test_util.py  test_watcher.py
tests/fixtures/: joinproject.json  login_project.html
